<resources>

    //login string
    //texto
    <string name="app_name">Colegio Abraham Valdelomar n116 </string>
    <string name="carLblMensaje">Cargando Aplicacion</string>
    <string name="carLblBienvenido">¡Bienvenido!</string>
    //login
    <string name="logTxtCorreo">example@email.com</string>
    <string name="logTxtClave">*********** </string>
    //check
    <string name="logChkRecordar">Recordar Sesión</string>
    //link
    <string name="logLblRegistrar">Registrate</string>
    //botones
    <string name="logBtnIngresar">Iniciar Sesión</string>
    <string name="logBtnSalir">Salir</string>
    //texto
    <string name="logTitIniciar">Iniciar Sesión</string>
    <string name="logTitHola">!Hola¡ ¿Estas para un fabuloso dia ?</string>
    <string name="logTitCorreo">Email</string>
    <string name="logTitClave">Password </string>
    <string name="logMegRegistrate">Registrate si no lo estas</string>
    <string name="logLblCopyRight">I.E. Abraham Valdelomar n116 </string>

    //recuperar password
    <string name="recTitPassword">Cambiar Contraseña</string>
    <string name="recTxtNuevaPassword">Ingrese su nueva contraseña</string>
    <string name="recTxtRepitaPassword">Repita su contraseña</string>

    //registro string
    <string name="regTitulo">Registrate  I.E. Abraham Valdelomar n116</string>
    //registro
    <string name="regNombre">Nombre</string>
    <string name="regApellido">Apellidos</string>
    <string name="regTxtCorreo">Correo electrónico</string>
    <string name="regTxtClave">Clave</string>
    <string name="regFechaNac">Fecha de Nacimiento</string>
    //texto
    <string name="regSexo">Sexo</string>
    <string name="regRbtNoDef">No definido</string>
    <string name="regRbtMasculino">Masculino</string>
    <string name="regRbtFemenino">Femenino</string>
    <string name="regMegIniciar">¿Ya tienes una cuenta?</string>
    //link
    <string name="regLblIniciar">Inicia Sesión</string>
    //check
    <string name="regLblTerminos">Acepto los términos y condiciones</string>
    //botones
    <string name="regContinuar">Continuar</string>
    <string name="regRegresar">Regresar</string>


    //terminos string
    <string name="termRegresar">Regresar</string>
    <string name="termTitTerminos">Terminos y Condiciones</string>
    <string name="termRellTerminos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</string>

    //Bienvenido String
    <string name="bieLblSaludo">Bienvenido {usuario}</string>
    //texto //link
    <string name="bieLblCan1">A - Salon \\ Seccion A</string>
    <string name="bieLblCan2">B - Salon \\ Seccion B</string>
    <string name="bieLblCan3">C - Salon \\ Seccion C</string>
    <string name="bieLblCan4">D - Salon \\ Seccion D</string>
    //button
    <string name="bieBtnSalir">Salir</string>

    //Caracteristicas 1 string
    <string name="car1TitLosa">Salon Seccion  A</string>
    <string name="car1Horario">Responder a las preguntas: </string>
    <string name="car1Rbtpr1">Pregunta 1</string>
    <string name="car1Rbtpr2">Pregunta 2</string>
    <string name="car1Rbtpr3">Pregunta 3</string>
    <string name="car1Rbtpr4">Pregunta 4</string>

    <string name="car1BtnAceptar">Aceptar</string>
    <string name="car1BtnRegresar">Regresar</string>

    //Caracteristicas 2 string
    <string name="car2TitLosa">Salon Seccion  B</string>
    <string name="car2Horario">Carateristicas:</string>
    <string name="car2Rbtpr1">Pregunta 1</string>
    <string name="car2Rbtpr2">Pregunta 2</string>
    <string name="car2Rbtpr3">Pregunta 3</string>
    <string name="car2Rbtpr4">Pregunta 4</string>

    <string name="car2BtnAceptar">Aceptar</string>
    <string name="car2BtnRegresar">Regresar</string>

    //Caracteristicas 3 string
    <string name="car3TitLosa">Salon Seccion  C</string>
    <string name="car3Horario">Carateristicas:</string>
    <string name="car3Rbtpr1">Pregunta 1</string>
    <string name="car3Rbtpr2">Pregunta 2</string>
    <string name="car3Rbtpr3">Pregunta 3</string>
    <string name="car3Rbtpr4">Pregunta 4</string>

    <string name="car3BtnAceptar">Aceptar</string>
    <string name="car3BtnRegresar">Regresar</string>

    //Caracteristicas 4 string
    <string name="car4TitLosa">Salon Seccion  D</string>
    <string name="car4Horario">Carateristicas:</string>
    <string name="car4Rbtpr1">Pregunta 1</string>
    <string name="car4Rbtpr2">Pregunta 2</string>
    <string name="car4Rbtpr3">Pregunta 3</string>
    <string name="car4Rbtpr4">Pregunta 4</string>

    <string name="car4BtnAceptar">Aceptar</string>
    <string name="car4BtnRegresar">Regresar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Carateristicas string metodo de pago
    <string name="biepag">Metodo de Pago</string>
    <string name="biepagBtnTarjeta">Tarjeta</string>
    <string name="biepagBtnYape">Yape</string>
    <string name="biepagBtnReg">Regresar</string>

    //Caracteristicas string de tarjeta
    <string name="TarTitTarjeta">Pago por Tarjeta</string>
    <string name="TarConfirmar">Confirmar</string>
    <string name="TarRegresar">Regresar</string>

    //Caracteristicas string de yape
    <string name="YaTitYape">Pago por Yape</string>
    <string name="YaConfirmar">Confirmar</string>
    <string name="YaRegresar">Regresar</string>

</resources>