<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.actividades.Login_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="25sp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="266sp"
            android:src="@drawable/escudo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/logTitIniciar"
            android:text="@string/logTitIniciar"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="!Hola¡ ¿Listo para un gran dia?"/>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/logTitIniciar"
            android:textSize="15sp"
            android:text="@string/logTitCorreo"/>

        <EditText
            android:id="@+id/logTxtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logTxtCorreo"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:text="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/logTitIniciar"
            android:textSize="15sp"
            android:text="@string/logTitClave"/>

        <EditText
            android:id="@+id/logTxtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logTxtClave"
            android:inputType="textPassword"
            android:maxLength="50"
            android:text="" />

        <CheckBox
            android:id="@+id/logChkRecordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/logChkRecordar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/logBtnIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnRegOrange"
                android:text="@string/logBtnIngresar"
                android:textAllCaps="false"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/logBtnSalir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="20sp"
                android:backgroundTint="@color/btnRegOrange"
                app:cornerRadius="20sp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:text="@string/logBtnSalir"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/logMegRegistrate"/>
        <TextView
            android:id="@+id/logLblRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/hyperlink"
            android:text="@string/logLblRegistrar"/>

        <TextView
            android:id="@+id/lblRecuperarPass_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/logLblRegistrar"
            android:textColor="@color/hyperlink"
            android:textSize="16sp"
            tools:text="¿Olvidaste tu contraseña?" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="32sp"
            android:layout_marginBottom="5sp"
            android:gravity="center_horizontal|bottom"
            android:text="I.E. 116 Abraham Valdelomar ©" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>